addressing issue #427 -- odd spacing after twitter widget

--- a/ubyssey/static/src/styles/modules/article/_embeds.scss
+++ b/ubyssey/static/src/styles/modules/article/_embeds.scss
@@ -143,7 +143,6 @@
 
   &:after {
     // Structure
-    padding-top: 56.25%; // 16:9 ratio
     display: inline-block;
     content: '';
   }
