--- a/ubyssey/static/src/styles/modules/article/_full_width.scss
+++ b/ubyssey/static/src/styles/modules/article/_full_width.scss
@@ -167,7 +167,7 @@
     height: 36px;
     @media($bp-larger-than-phablet) {
       width: 585px;
-      height: 54px;
+      //height: 54px;
     }
   }
 
